--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@quixo3/prisma-session-store": "^3.1.19",
+    "@supabase/supabase-js": "^2.93.3",
     "bcryptjs": "^3.0.3",
     "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
@@ -25,6 +26,7 @@
     "pg": "^8.17.2"
   },
   "devDependencies": {
+    "base64-arraybuffer": "^1.0.2",
     "prisma": "^7.3.0"
   }
 }
